--- a/Teste_spring_security/pom.xml
+++ b/Teste_spring_security/pom.xml
@@ -88,6 +88,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
